<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/toolbar_custom" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scroll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:id="@+id/linear_btn_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/elayout_save"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <AutoCompleteTextView
                        android:id="@+id/etxt_save"
                        style="@style/AutoCompleteSave"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        android:text="@string/text_save"
                        android:textAlignment="center"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_close"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin_chb"
                    android:layout_weight="1"
                    android:text="@string/text_close" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lienar_zone_auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_btn_group">

                <TextView
                    android:id="@+id/txt_zone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:background="@drawable/rectangle"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/default_margin"
                    android:text="@string/text_zone"
                    android:textSize="16sp"
                    tools:ignore="NestedWeights" />

                <ImageView
                    android:id="@+id/iv_choose_zone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_choose_elem" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lienar_code_seats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lienar_zone_auto">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/elayout_code_client"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etxt_code_client"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:hint="@string/text_code_client"
                        android:inputType="textAutoCorrect" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/elayout_seats_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_weight="1"
                    android:enabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etxt_seats_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:hint="@string/text_number_of_seats"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_number_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lienar_code_seats">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/elayout_document_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etxt_document_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:hint="@string/text_number"
                        android:inputType="textAutoCorrect" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/elayout_weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etxt_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:hint="@string/text_weight"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_chb"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_chb_width"
                android:layout_marginTop="@dimen/default_margin"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_number_weight">

                <CheckBox
                    android:id="@+id/chb_exclamation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:layoutDirection="rtl"
                    android:text="@string/text_exclamation" />

                <CheckBox
                    android:id="@+id/chb_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:enabled="false"
                    android:layoutDirection="rtl"
                    android:text="@string/text_currency" />

                <CheckBox
                    android:id="@+id/chb_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:enabled="false"
                    android:layoutDirection="rtl"
                    android:text="@string/text_arrow" />

                <CheckBox
                    android:id="@+id/chb_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:enabled="false"
                    android:layoutDirection="rtl"
                    android:text="@string/text_brand" />

                <CheckBox
                    android:id="@+id/chb_z"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:enabled="false"
                    android:layoutDirection="rtl"
                    android:text="@string/text_z" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear_package"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_chb"
                android:orientation="horizontal"
                android:weightSum="20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_chb">

                <TextView
                    android:id="@+id/txt_package"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_weight="18"
                    android:background="@drawable/rectangle"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/default_margin"
                    android:text="@string/text_package"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/iv_choose_package"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_choose_elem" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_btn_group_copy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_package">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/elayout_save_copy"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <AutoCompleteTextView
                        android:id="@+id/etxt_save_copy"
                        style="@style/AutoCompleteSave"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        android:text="@string/text_save"
                        android:textAlignment="center"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_close_copy"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin_chb"
                    android:layout_weight="1"
                    android:text="@string/text_close" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>