<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<!--    <include-->
<!--        android:id="@+id/include_toolbar"-->
<!--        layout="@layout/toolbar_main" />-->

    <ProgressBar
        android:id="@+id/pb_load"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin">

        <LinearLayout
            android:id="@+id/linear_chb"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_chb_width"
            android:layout_marginTop="@dimen/default_margin"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <CheckBox
                android:id="@+id/chb_acceptance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/text_acceptance" />

            <CheckBox
                android:id="@+id/chb_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layoutDirection="rtl"
                android:text="@string/text_weight" />

            <CheckBox
                android:id="@+id/chb_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layoutDirection="rtl"
                android:text="@string/text_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_doc_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_chb">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/elayout_document_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="38">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etxt_document_number"
                    style="@style/TextInputDefault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_document_number"
                    android:inputType="textAutoCorrect" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/chb_visibiliy"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_commands"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_icon_size"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:gravity="left|center_vertical"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_doc_number">

            <androidx.cardview.widget.CardView
                style="@style/CardViewDefault"
                android:layout_width="@dimen/default_icon_size"
                android:layout_height="@dimen/default_icon_size"
                app:cardCornerRadius="50dp">

                <ImageButton
                    android:id="@+id/iv_add"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_add" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardViewDefault"
                android:layout_width="@dimen/default_icon_size"
                android:layout_height="@dimen/default_icon_size"
                android:layout_marginStart="@dimen/default_margin_chb"
                app:cardCornerRadius="50dp">

                <ImageButton
                    android:id="@+id/iv_refresh"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_refresh" />

            </androidx.cardview.widget.CardView>

            <CheckBox
                android:id="@+id/chb_show_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_text"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_commands">

            <TextView
                android:id="@+id/txt_document_number"
                style="@style/TextNumber"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center|start"
                android:text="@string/text_document_number" />

            <TextView
                android:id="@+id/txt_client"
                style="@style/TextNumber"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_weight="3"
                android:gravity="center|start"
                android:text="@string/text_code_client" />

            <TextView
                android:id="@+id/txt_package"
                style="@style/TextNumber"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_weight="3"
                android:gravity="center|start"
                android:text="@string/text_package" />

            <TextView
                android:id="@+id/txt_zone"
                style="@style/TextNumber"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_weight="1"
                android:gravity="center|start"
                android:text="@string/text_zone" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_empty_weight"
                    style="@style/TextNumber"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_chb_width"
                    android:text="@string/text_weight" />

                <TextView
                    android:id="@+id/txt_empty_capacity"
                    style="@style/TextNumber"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_chb_width"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/text_capacity" />

            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_acceptance_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_text" />

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_acceptance_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
